--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-speech_recognition as sr
-pyttsx3
-psutil
-datetime
-os
-webbrowser
-google.generativeai as genai
+google-generativeai==0.8.6
+psutil==7.2.2
+PyAudio==0.2.14
+python-dotenv==1.2.1
+pyttsx3==2.99
+SpeechRecognition==3.14.5
